--- a/FRONT/Front_End_SENA_SANF-main/index.html
+++ b/FRONT/Front_End_SENA_SANF-main/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/Sena_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <title>SENA - SANF Gestión Horarios</title>
+    <title>SENA - SANF Gestión de Actividades Grupo de Formacion.</title>
   </head>
   <body>
     <div id="root"></div>
